--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,15 +11,19 @@ h1, h2, h3, h4 {
   font-weight: 500;
 }
 
+svg {
+  fill: currentColor;
+}
+
 button.Button {
   background-color: #EAEAEA;
   border: 0;
   border-radius: 6px;
   color: #333333;
   cursor: pointer;
-  font-size: 16px;
-  line-height: 32px;
-  min-width: 161px;
+  font-size: 12px;
+  line-height: 22px;
+  min-width: 120px;
   padding: 4px;
   outline: 0;
 }
@@ -27,6 +31,17 @@ button.Button {
 button.Button.accent {
   background-color: #FF6647;
   color: #FFFFFF;
+}
+
+button.Button:disabled {
+  background-color: #C4C4C4;
+  color: #9B9B9B;
+}
+
+button.Button.large {
+  font-size: 16px;
+  line-height: 32px;
+  min-width: 161px;
 }
 
 input.TextInput {
