--- a/src/components/Dictionary.css
+++ b/src/components/Dictionary.css
@@ -1,5 +1,6 @@
 .Dictionary .moduleName {
   color: #ff6647;
+  font-weight: 500;
 }
 
 .Dictionary .searchLine {
@@ -18,19 +19,24 @@
   border-radius: 6px;
   line-height: 18px;
   outline: none;
-  padding: 3px 10px;
+  padding: 3px 30px 3px 10px;
+}
+
+.Dictionary svg {
+  color: gainsboro;
+  height: 16px;
 }
 
 .Dictionary .searchLine svg {
-  color: gainsboro;
-  height: 15px;
+  cursor: pointer;
   position: absolute;
   right: 10px;
   top: 5px;
 }
 
-.Dictionary input::placeholder {
-  color: #bbb;
+.Dictionary input::placeholder,
+.Dictionary textarea::placeholder {
+  color: #aaa;
 }
 
 .Dictionary table {
@@ -59,22 +65,30 @@
   border-bottom: 2px solid darkgrey;
 }
 
-.Dictionary table input {
+.Dictionary table input,
+.Dictionary table textarea {
   box-sizing: border-box;
+  border: 1px solid gainsboro;
+  line-height: 22px;
+  margin: 0;
+  outline: none;
+  padding: 0 4px;
+  resize: none;
   width: 100%;
 }
 
 .Dictionary table td > span {
   background-color: rgba(255,255,255,0.8);
   bottom: 4px;
-  box-shadow: -4px 0 8px 1px rgba(255,255,255,0.8);
+  box-shadow: -2px 0 8px 0 rgba(255,255,255,0.8);
   color: #999;
   cursor: pointer;
   display: block;
   font-size: smaller;
   font-weight: bolder;
+  line-height: 16px;
   position: absolute;
-  right: 4px;
+  right: -1px;
 }
 
 .Dictionary button.Button {
